[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickstem"
dynamic = ["version"]
description = "Tickstem Python SDK — cron jobs, uptime monitoring, heartbeat checks, email verification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["cron", "uptime", "monitoring", "heartbeat", "email-verification", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://tickstem.dev"
Documentation = "https://tickstem.dev/docs"
Repository = "https://github.com/tickstem/python"

[tool.hatch.version]
path = "tickstem/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["tickstem"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["tickstem"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]
